--- a/week1/index.html
+++ b/week1/index.html
@@ -18,6 +18,8 @@
                <input id="lunch-menu" type="text"
                placeholder="list comma separated dishes you usually have for lunch"
                class="form-control" ng-model="whatIsItAllAbout">
+             <br />
+             <p><em>does NOT consider an empty item, i.e., , , as an item towards to the count</em></p>
            </div>
            <div class="form-group">
                <button class="btn btn-default" ng-click="CheckItOut()">Check If Too Much</button>
